# space_inspection

./: README.md
base_bringup/: package.xml  setup.cfg  setup.py
base_bringup/config/: bridge.yaml
base_bringup/launch/: test.launch.py  urdf.launch.py  vel.launch.py
base_controllers/: package.xml  setup.cfg  setup.py
base_controllers/base_controllers/: actuator_publisher.py  elliptical.py  elliptical_pid.py  joint_trajectory1.py  joint_trajectory2.py  jt_plotter.py  jt_plotter1.py  jt_plotter2.py  lqr_v1.py  odom_pid.py  odom_subscriber.py  pos_2.py  pos_3.py  pos_plotter.py  position_controller.py
base_description/: CMakeLists.txt  package.xml
base_description/models/base0/: base.sdf  base2.sdf  base3.sdf
base_description/models/base1/: model.sdf
base_description/models/base2/: model.sdf
base_description/models/base3/: model.sdf
base_description/models/base4/: model.sdf
base_description/models/base5/: model.sdf
base_description/models/base6/: model.config  model.sdf
base_description/models/base7/: model.sdf
base_description/urdf/: open_half.urdf.xacro  open_manipulator_x.urdf.xacro  ros2_control.xacro  test2.urdf.xacro  thruster.xacro
base_gazebo/: CMakeLists.txt  package.xml  runtrajectory.sh
base_gazebo/worlds/: empty_testbed.sdf  ground_testbed.sdf  raceway.sdf  space_world.sdf  thruster_testbed.sdf
launch_time/: package.xml  setup.cfg  setup.py
launch_time/config/: bridge.yaml
launch_time/launch/: gz.launch.py  gz_sim.launch.py
pybullet/: ApplyForceCube.py  README.md  firstInspectionPath.py  utils.py
(+21 files in other folders)
